--- a/css/style.css
+++ b/css/style.css
@@ -222,6 +222,7 @@ header.rolar {
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 4;
+    line-clamp: 4;
     overflow: hidden;
     text-overflow: ellipsis;
   }
