--- a/css/style.css
+++ b/css/style.css
@@ -534,6 +534,35 @@ footer .tech-icons i {
   color: var(--color-03);
   cursor: pointer;
 }
+
+.back-to-top {
+  background: var(--btn-color);
+  cursor: pointer;
+  border-radius: 50%;
+  padding: 8px;
+  position: fixed;
+  right: 1rem;
+  bottom: 1rem;
+
+  line-height: 0;
+
+  visibility: hidden;
+  opacity: 0;
+
+  transition: 0.3s;
+  transform: translateY(100%);
+}
+
+.back-to-top.show {
+  visibility: visible;
+  opacity: 1;
+  transform: translateY(0);
+}
+
+i {
+  font-size: 34px;
+  color: var(--text-color02);
+}
 /*--Botoes--*/
 
 /*--Media Queries--*/
