--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 /* Importar fontes do Google Fonts */
 @import url("https://fonts.googleapis.com/css2?family=Jersey+10&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Bree+Serif&family=Poppins:wght@400;500;700&display=swap');
 
 :root {
   --main-color: #565449; /* Cor primária para botões e destaques */
@@ -43,6 +44,7 @@ header {
   top: 0;
   left: 0;
   width: 100%;
+  height: 80px;
   padding: 1.1rem;
   background-color: transparent;
   display: flex;
@@ -50,11 +52,6 @@ header {
   align-items: center;
   z-index: 100;
   transition: var(--bg-color-01) 0.3s ease;
-
-  .logo:hover {
-    color: var(--text-color02);
-    transition: 0.5s ease;
-  }
 }
 header.rolar {
   background-color: var(--bg-color-01);
@@ -84,10 +81,15 @@ header.rolar {
 }
 
 .logo {
-  font-size: 1.8rem;
-  color: var(--text-color);
-  font-weight: 600;
+  display: flex;
+  align-items: center;
   cursor: pointer;
+}
+
+.logo-img img {
+  max-width: 40%;
+  height: auto;
+  width: auto;
 }
 .nav a {
   font-size: 1rem;
@@ -234,8 +236,12 @@ header.rolar {
 
 .social-media a:hover {
   background-color: var(--main-color);
-  color: var(--text-color);
+  color: var(--text-color02);
   box-shadow: 0 0 0.3rem var(--btn-color);
+
+  i {
+    color: var(--text-color);
+  }
 }
 /*--seção sobre--*/
 /*--seção habilidades--*/
