--- a/css/style.css
+++ b/css/style.css
@@ -257,6 +257,7 @@ header.rolar {
     font-size: 2.2rem;
     text-align: center;
     color: var(--text-color02);
+    margin-top: 2rem;
     margin-bottom: 2rem;
   }
 }
@@ -301,8 +302,6 @@ header.rolar {
     line-height: 1.5;
     display: -webkit-box;
     -webkit-box-orient: vertical;
-    -webkit-line-clamp: 4;
-    line-clamp: 4;
     overflow: hidden;
     text-overflow: ellipsis;
   }
